--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+<img src="https://i.kym-cdn.com/photos/images/newsfeed/000/131/399/fry.PNG?1307468855">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion">
+<img src="https://i.ytimg.com/vi/Kd0uT_0t3s4/maxresdefault.jpg" alt="PatrickTrickQuestionMeme" Title="My reaction when I see a trick question">
 </body>
 </html>
